# TSW-EBuLa

./: .gitignore  LICENSE  README.md  TODO.md  build.bat  dcz_dc-dh.csv  dcz_dh-dc.csv  ebula.py  ebula.spec  html_ebu.py  pyproject.toml  setup.py
examples/: example_train.json
requirements/: base.txt  requirements.txt.off
scripts/: build.bat  build.venv.bat  pip.freeze.bat  requirements.txt  run.bat  setup.bat
src/: ebula.py  globals.py
src/editor/: editor.py  test.py
src/editor/components/: line_map_mod.py  line_timetable.py  settings_panel.py  sidebar.py
src/editor/components/examples/: ScrollableCheckBoxFrame.py  ScrollableRadiobuttonFrame.py
src/editor/components/line_comp/: km.py  poi.py  symbol.py  vmax.py
src/editor/funcs/: map_mod.py  settings.py
src/editor/tests/: CTkFrame.py  grid copy.py  grid.py  scrollable_frame_example.py
src/editor/windows/: App.py  App_main.py  App_modules.py  App_timetable.py
src/modules/: dh-dpa.csv  dnw-dc.csv  dpa-dnw.csv  template.csv
src/timetables/: dcz_dc-dh.csv  dcz_dh-dc.csv  dcz_dh-dc.json  dcz_dh-dc_any.json  dcz_dh-dc_ire.json  dcz_dh-dc_rb.json  dcz_dh-dc_re.json  dra_dcw-dh_s.csv  dra_dh-dcw_s.csv  dra_dh-dcw_s.json
src/timetables_old/: mtb_nah-nm.csv  mtb_nah-nm.json
src/util/: dsresolve.py  util.py
timetables/: dcz_dc-dh.csv  dcz_dc-dh.json  dcz_dh-dc.csv  dcz_dh-dc.json  dra_dcw-dh_s.json  dra_dh-dcw_s.csv
