# 
[project]
name = "TSW-EBULA"
version = "0.1.0"
description = "A project for a EBULA in TSW"

[EBULA]
file.version = "1.0.0"

# Insted of requirements.txt
[dependency-groups]
base = [
    "pypiwin32", 
    "pygame",
    "easygui",
    "customtkinter"
    ]
dev = [
    # {include = "base"}    # -> PEP 735
    "pyinstaller",
    ]